Форматирование текста Изображения

--- a/3. Стили/style.css
+++ b/3. Стили/style.css
@@ -1,3 +1,18 @@
+/*
+h2 - селектор, который ищет на странице все элементы h2
+color - свойство, определяющее цвет текста
+
+Цвет можно задавать различными способами:
+1. #000ААА - Шестнадцатиричный код
+2. rgb() - функция
+3. black - Название цвета
+
+background-color - свойство, задающее цвет фона
+*/
 h2 {
     color: #4a50d6;
+}
+
+span {
+    background-color: rgb(191, 199, 74);
 }
