Списки Блочная модель

--- a/5. Изображения/style.css
+++ b/5. Изображения/style.css
@@ -1,12 +1,20 @@
 /*
-Классы указываются с точкой в начале.
+Селекторы классов указываются с точкой в начале.
 
 Свойства:
 width - ширина объекта
 
 Единицы измерения в CSS:
+# TODO: Описать единицы измерения
 
 */
 .hero-image {
     width: 350px;
+}
+
+/*
+Фоновое изображение страницы
+*/
+body {
+    background-image: url("images/background.png");
 }
