Блочная модель (II)

--- a/7. Блочная модель/style.css
+++ b/7. Блочная модель/style.css
@@ -1,5 +1,12 @@
 /*
 display - свойство, изменяющее тип компонента
+Значения:
+block - делает элемент блочным
+inline-block - делает элемент строчно-блочным
+inline - делает элемент строчным
+none - убирает элемент из общего потока (элемента, как будто бы нет)
+grid - элемент сеточной модели (позиционирование элементов в виде сетки)
+flex - элемент flex-модели (гибкое позиционирование элементов)
 */
 p {
     display: inline-block;
@@ -9,15 +16,34 @@ border - свойство, отвечающее за рамку компонен
 */
 p, div, span {
     /* Сложное свойство в одну строку */
-    /* Толщина линии, вид линии, цвет линии*/
+    /* Толщина линии (1px), вид линии (solid), цвет линии (#30459c)*/
     border: 1px solid #30459c;
 
     /* Альтернативный вариант (по-отдельности)*/
     border-color: #4a50d6;
     border-width: 2px;
     border-style: double;
+    /*
+        margin - свойство, задающее отступы снаружи элемента
+    */
+    margin: 7px 0 7px 0;
+    /*
+        padding - свойство, задающее отступ внутри элемента (от контента до границы)
+    */
+    padding: 5px;
 }
 
 p {
     width: 200px;
+}
+
+.rounded {
+    /*
+        border-radius - скругление рамки
+    */
+    border-radius: 5px;
+}
+
+.deleted {
+    display: none;
 }
